# rdap

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release.yml  repo.yml
config/: tlds.txt
examples/: asn_lookup.rs  autnum_query.rs  auto_detect.rs  basic_query.rs  batch_query.rs  complete_example.rs  custom_server.rs  domain_info.rs  error_handling.rs  ip_lookup.rs  ip_query.rs  json_output.rs
packaging/arch/rdap/: PKGBUILD
packaging/arch/rdap-bin/: PKGBUILD
src/: bootstrap.rs  cache.rs  client.rs  config.rs  display.rs  error.rs  lib.rs  main.rs  request.rs
src/models/: autnum.rs  common.rs  domain.rs  entity.rs  error.rs  ip_network.rs  mod.rs  nameserver.rs  search.rs  vcard.rs
