[package]
name = "rdap"
version = "0.2.1"
edition = "2024"
authors = ["xTom", "Akaere Networks"]
description = "A modern RDAP (Registration Data Access Protocol) client"
license = "MIT"
homepage = "https://github.com/xtomcom/rdap"
repository = "https://github.com/xtomcom/rdap"

[dependencies]
# HTTP client
reqwest = { version = "0.13", features = ["json", "rustls"] }
tokio = { version = "1.49", features = ["full"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# Colors and formatting
colored = "3.1"
comfy-table = "7.2"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# URL handling
url = "2.5"

# IP/CIDR handling
ipnet = "2.11"
urlencoding = "2.1"

# Logging
env_logger = "0.11"
log = "0.4"


[dev-dependencies]
mockito = "1.7"
tempfile = "3.24"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# Debian package metadata
[package.metadata.deb]
maintainer = "xTom <packages@xtom.com>"
copyright = "2026, xTom"
license-file = ["LICENSE", "0"]
extended-description = "A modern RDAP client for querying domain, IP, and ASN registration data following RFC 7480-7484."
section = "net"
priority = "optional"
assets = [
    ["target/release/rdap", "usr/bin/", "755"],
]

# RPM package metadata
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/rdap", dest = "/usr/bin/rdap", mode = "0755" },
]

[package.metadata.generate-rpm.requires]
